Linear_regression.ipynb

--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -343,3 +343,64 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
+
+####Adding:
+# Importing necessary libraries
+import pandas as pd
+import numpy as np
+from sklearn.model_selection import train_test_split
+from sklearn.linear_model import LinearRegression
+from sklearn.metrics import mean_squared_error, r2_score
+import matplotlib.pyplot as plt
+
+# Dataset: Production budget (USD) and Worldwide gross revenue (USD)
+data = {
+    "production_budget_usd": [
+        25000000, 140000000, 130000000, 65000000, 70000000, 145000000, 151500000, 150000000, 100000000, 85000000, 
+        20000000, 60000000, 140000000, 40000000, 103000000, 80000000, 60000000, 210000000, 70000000, 65000000,
+        # Add more values here for the complete dataset...
+    ],
+    "worldwide_gross_usd": [
+        441286003, 441767803, 442161562, 442169052, 443483213, 448191819, 449239855, 449326618, 449948323, 450728529,
+        451329842, 454161935, 456810575, 457507776, 457683805, 457697994, 457729388, 459359555, 461651246, 463517383,
+        # Add more values here for the complete dataset...
+    ]
+}
+
+# Loading data into a DataFrame
+df = pd.DataFrame(data)
+
+# Splitting data into features (X) and target (y)
+X = df[['production_budget_usd']]
+y = df['worldwide_gross_usd']
+
+# Splitting the data into training and testing sets
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
+
+# Initializing and fitting the Linear Regression model
+model = LinearRegression()
+model.fit(X_train, y_train)
+
+# Making predictions
+y_pred = model.predict(X_test)
+
+# Evaluating the model
+mse = mean_squared_error(y_test, y_pred)
+r2 = r2_score(y_test, y_pred)
+
+print(f"Mean Squared Error: {mse}")
+print(f"R-squared Score: {r2}")
+
+# Visualizing the results
+plt.scatter(X_test, y_test, color='blue', label='Actual Revenue')
+plt.plot(X_test, y_pred, color='red', label='Predicted Revenue', linewidth=2)
+plt.xlabel('Production Budget (USD)')
+plt.ylabel('Worldwide Gross Revenue (USD)')
+plt.title('Movie Revenue Prediction')
+plt.legend()
+plt.show()
+
+# Displaying the coefficients
+print(f"Intercept: {model.intercept_}")
+print(f"Coefficient: {model.coef_[0]}")
